<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_ride"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                card_view:cardCornerRadius="16dp"
                card_view:cardElevation="4dp"
                card_view:contentPadding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_startpoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/tv_destpoint"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="22dp"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/main_text_color"
                        android:textSize="26sp"
                        tools:text="DU" />

                    <TextView
                        android:id="@+id/tv_destpoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="22dp"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/main_text_color"
                        android:textSize="26sp"
                        tools:text="Dvoika" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="42dp"
                        android:layout_marginBottom="54dp"
                        android:layout_toStartOf="@+id/tv_places_text"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/main_text_color"
                        android:textSize="28sp"
                        tools:text="8:50" />

                    <TextView
                        android:id="@+id/tv_places_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="58dp"
                        android:layout_toStartOf="@+id/tv_places_count"
                        android:textSize="16sp"
                        tools:text="мест" />

                    <TextView
                        android:id="@+id/tv_places_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="28dp"
                        android:layout_marginBottom="54dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/main_text_color"
                        android:textSize="28sp"
                        tools:text="2" />

                    <Button
                        android:id="@+id/btn_decline"
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/join_button_shape"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:fontFamily="@font/roboto"
                        android:text="@string/decline"
                        android:textColor="@color/vk_white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="4dp"
                        card_view:srcCompat="@drawable/way" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/passengers"
                    android:textColor="@color/main_text_color"
                    android:textSize="26sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="0.7"
                    card_view:cardCornerRadius="16dp"
                    card_view:cardElevation="4dp"
                    card_view:contentPadding="4dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_users_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/users_list_item" />
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="0.3"
                    android:background="@drawable/create_button_shape"
                    android:backgroundTint="@android:color/darker_gray"
                    android:fontFamily="@font/roboto"
                    android:text="@string/finish"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>